k3s/frontend/feingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-ingress
  namespace: craftista
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: my-frontend.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: craftista-fe-svc
            port: 
              number: 80
